force-app/main/default/objects/Vendor__c/fields/Paid_Unpaid__c.field-meta.xml
<CustomField>
    <fullName>Paid_Unpaid__c</fullName>
    <label>Paid/Unpaid</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Unpaid</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>