force-app/main/default/objects/Vendor__c/fields/Unpaid__c.field-meta.xml
<CustomField>
    <fullName>Unpaid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unpaid</label>
    <type>Checkbox</type>
</CustomField>