force-app/main/default/objects/Vendor__c/validationRules/FEIN_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>FEIN_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
ISBLANK(FEIN__c), false, NOT(REGEX(  FEIN__c , &quot;[0-9]{2}-[0-9]{7}&quot;))
)</errorConditionFormula>
    <errorDisplayField>FEIN__c</errorDisplayField>
    <errorMessage>XX-XXXXXXX</errorMessage>
</ValidationRule>