force-app/main/default/objects/Vendor__c/validationRules/SSN_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>SSN_Validation</fullName>
    <active>true</active>
    <description>SSN format should be in XXX-XX-XXXX</description>
    <errorConditionFormula>IF(
ISBLANK(SSN__c), false, NOT(REGEX( SSN__c , &quot;[0-9]{3}-[0-9]{2}-[0-9]{4}&quot;))
)</errorConditionFormula>
    <errorDisplayField>SSN__c</errorDisplayField>
    <errorMessage>SSN should be in the format &quot;XXX-XX-XXXX&quot;</errorMessage>
</ValidationRule>