force-app/main/default/objects/Vendor__c/listViews/New_vendors.listView-meta.xml
<ListView>
    <fullName>New_vendors</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Business_Name__c</columns>
    <columns>SSN__c</columns>
    <columns>FEIN__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>notEqual</operation>
        <value>Approved</value>
    </filters>
    <label>New vendors</label>
</ListView>