force-app/main/default/objects/Vendor__c/listViews/Vendor_Maintenance.listView-meta.xml
<ListView>
    <fullName>Vendor_Maintenance</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Business_Name__c</columns>
    <columns>SSN__c</columns>
    <columns>FEIN__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Vendor Maintenance</label>
</ListView>